--- a/SpaceScience.csproj
+++ b/SpaceScience.csproj
@@ -72,6 +72,9 @@
 	  <MauiXaml Update="Views\Cells\MarsByDate.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\MapPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\MarsPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
