--- a/SpaceScience.csproj
+++ b/SpaceScience.csproj
@@ -28,6 +28,63 @@
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</SupportedOSPlatformVersion>
 		<TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'tizen'">6.5</SupportedOSPlatformVersion>
+		<AndroidSigningKeyStore>hellomauiapp.keystore</AndroidSigningKeyStore>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net6.0-android|AnyCPU'">
+	  <AndroidKeyStore>False</AndroidKeyStore>
+	  <AndroidSigningStorePass>hellomauiapp</AndroidSigningStorePass>
+	  <AndroidSigningKeyAlias>hellomauiapp</AndroidSigningKeyAlias>
+	  <AndroidSigningKeyPass>hellomauiapp</AndroidSigningKeyPass>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net6.0-android|AnyCPU'">
+	  <AndroidKeyStore>False</AndroidKeyStore>
+	  <AndroidSigningStorePass>hellomauiapp</AndroidSigningStorePass>
+	  <AndroidSigningKeyAlias>hellomauiapp</AndroidSigningKeyAlias>
+	  <AndroidSigningKeyPass>hellomauiapp</AndroidSigningKeyPass>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net6.0-ios|AnyCPU'">
+	  <AndroidKeyStore>False</AndroidKeyStore>
+	  <AndroidSigningStorePass>hellomauiapp</AndroidSigningStorePass>
+	  <AndroidSigningKeyAlias>hellomauiapp</AndroidSigningKeyAlias>
+	  <AndroidSigningKeyPass>hellomauiapp</AndroidSigningKeyPass>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net6.0-ios|AnyCPU'">
+	  <AndroidKeyStore>False</AndroidKeyStore>
+	  <AndroidSigningStorePass>hellomauiapp</AndroidSigningStorePass>
+	  <AndroidSigningKeyAlias>hellomauiapp</AndroidSigningKeyAlias>
+	  <AndroidSigningKeyPass>hellomauiapp</AndroidSigningKeyPass>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net6.0-maccatalyst|AnyCPU'">
+	  <AndroidKeyStore>False</AndroidKeyStore>
+	  <AndroidSigningStorePass>hellomauiapp</AndroidSigningStorePass>
+	  <AndroidSigningKeyAlias>hellomauiapp</AndroidSigningKeyAlias>
+	  <AndroidSigningKeyPass>hellomauiapp</AndroidSigningKeyPass>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net6.0-maccatalyst|AnyCPU'">
+	  <AndroidKeyStore>False</AndroidKeyStore>
+	  <AndroidSigningStorePass>hellomauiapp</AndroidSigningStorePass>
+	  <AndroidSigningKeyAlias>hellomauiapp</AndroidSigningKeyAlias>
+	  <AndroidSigningKeyPass>hellomauiapp</AndroidSigningKeyPass>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net6.0-windows10.0.19041.0|AnyCPU'">
+	  <AndroidKeyStore>False</AndroidKeyStore>
+	  <AndroidSigningStorePass>hellomauiapp</AndroidSigningStorePass>
+	  <AndroidSigningKeyAlias>hellomauiapp</AndroidSigningKeyAlias>
+	  <AndroidSigningKeyPass>hellomauiapp</AndroidSigningKeyPass>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net6.0-windows10.0.19041.0|AnyCPU'">
+	  <AndroidKeyStore>False</AndroidKeyStore>
+	  <AndroidSigningStorePass>hellomauiapp</AndroidSigningStorePass>
+	  <AndroidSigningKeyAlias>hellomauiapp</AndroidSigningKeyAlias>
+	  <AndroidSigningKeyPass>hellomauiapp</AndroidSigningKeyPass>
 	</PropertyGroup>
 
 	<ItemGroup>
